--- a/lezione1.html
+++ b/lezione1.html
@@ -1,4 +1,11 @@
 <a href="#">Lezione 1</a>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+    }
+</style>
+</head>
+<body>
     <h2>La rappresentazione visiva</h2>
     <p>L’attività e l’operazione di rappresentare con figure, segni e simboli sensibili, o con processi vari, anche non materiali, oggetti o aspetti della realtà, fatti e valori astratti, e quanto viene così rappresentato.</p>
     <ul>
