--- a/index.html
+++ b/index.html
@@ -4,36 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indice di Informatica Applicata C2</title>
+    
+    <!-- Bootstrap CSS CDN -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    
     <style>
         body {
             font-family: Arial, sans-serif;
-        }
-        h1 {
-            font-size: 2em;
-            text-align: center;
-        }
-        ul {
-            list-style-type: disc;
-            margin-left: 40px;
-        }
-        a {
-            color: blue;
-            text-decoration: underline;
         }
     </style>
 </head>
 <body>
 
-    <h1>Indice di Informatica Applicata C2</h1>
+    <div class="container text-center mt-5">
+        <h1 class="mb-4">Indice di Informatica Applicata C2</h1>
 
-    <ul>
-        <li><a href="lezione1.html">Lezione 1</a></li>
-        <li><a href="#">Lezione 2</a></li>
-        <li><a href="#">Lezione 3</a></li>
-        <li><a href="#">Lezione 4</a></li>
-        <li><a href="#">Lezione 5</a></li>
-        <li><a href="#">Lezione 6</a></li>
-    </ul>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item"><a href="lezione1.html" class="text-primary">Lezione 1</a></li>
+            <li class="list-group-item">Lezione 2</li>
+            <li class="list-group-item">Lezione 3</li>
+            <li class="list-group-item">Lezione 4</li>
+            <li class="list-group-item">Lezione 5</li>
+            <li class="list-group-item">Lezione 6</li>
+        </ul>
+    </div>
+
+    <!-- Bootstrap JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
 </html>
